--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,2 +1,38 @@
 <h1>Products#show</h1>
 <p>Find me in app/views/products/show.html.erb</p>
+<br>
+<span class="yconnectLogin"></span>
+<script type="text/javascript">
+window.yconnectInit = function() {
+    YAHOO.JP.yconnect.Authorization.init({
+        button: {
+            format: "image",
+            type: "a",
+            textType:"a",
+            width: 196,
+            height: 38,
+            className: "yconnectLogin"
+        },
+        authorization: {
+            clientId: "dj0zaiZpPUloMG5EdFV4eG1NYSZzPWNvbnN1bWVyc2VjcmV0Jng9NWY-",
+            redirectUri: "https://ecm-stock-keeper.herokuapp.com/products/show",
+            scope: "openid",
+            state: "",
+            nonce: "",
+            windowWidth: "500",
+            windowHeight: "400"
+        },
+        onError: function(res) {
+            // エラー発生時のコールバック関数
+        },
+        onCancel: function(res) {
+            // 同意キャンセルされた時のコールバック関数
+        }
+    });
+};
+(function(){
+var fs = document.getElementsByTagName("script")[0], s = document.createElement("script");
+s.setAttribute("src", "https://s.yimg.jp/images/login/yconnect/auth/1.0.3/auth-min.js");
+fs.parentNode.insertBefore(s, fs);
+})();
+</script>
